# tech_quiz

./: .gitignore  .replit  Procfile  config.py  db.psql  pyproject.toml  quiz.py  requirements.txt
app/: __init__.py  models.py  quiz_maker.py  routes.py
app/static/: add_question.css  add_question.js  base.js  chess.js  desctop_style.css  messages.css  messages.js  mid_style.css  quiz.css  quiz.js  quiz_quiz.css  quiz_quiz.js  ranking.css  ranking.js  start_style.css  style.css  view.js
app/templates/: add_question.html  base.html  chess.html  messages.html  pops.html  pops_comm.html  pops_comm_view.html  pops_contact.html  pops_del.html  quiz.html  quiz_quiz.html  ranking.html  success.html  view.html
migrations/versions/: 037906a8f2a3_.py  1341c2dae2c9_.py  24592612fc17_.py  5aa455d77ced_.py  653c30436cc2_.py  6a29c937b692_.py  928a41165630_.py  94e9b0855712_.py  bc856132cad9_.py  bd5ad1f7a63e_.py  c156e43d3777_.py  c7ec9100faf4_.py  e3dc110d190f_.py  f86f2c198c17_.py  f8937f0e29a0_.py  fb613e0c66de_.py
