[tool.poetry]
name = "techquiz"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-sqlalchemy = "^2.4.4"
flask = "^1.1.2"
flask-migrate = "^2.5.3"
alembic = "^1.4.3"
sqlalchemy = "^1.3.20"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
